--- a/src/components/ui/TextBoxSearch.scss
+++ b/src/components/ui/TextBoxSearch.scss
@@ -1,6 +1,7 @@
 .widget-text-box-search {
     .search-bar {
         position: relative;
+        padding-bottom: 5px;
 
         .btn-transparent {
             border: none;
